Fix hero overflow bug

--- a/styles/block/_page.scss
+++ b/styles/block/_page.scss
@@ -25,6 +25,7 @@
   }
 
   &__content {
-    overflow: hidden;
+    overflow-x: hidden;
+    height: 100%;
   }
 }
